test/classes/jplevyak/record_type_hierarchy-3-error.good
_chpl_adomain.chpl:124: fwrite, f : file, x : _aarray
_chpl_adomain.chpl:1: fwrite, f : file, val : _adomain_info
_chpl_adomain.chpl:34: fwrite, f : file, val : _adomain_lit
_chpl_adomain.chpl:62: fwrite, f : file, x : _adomain
_chpl_adomain.chpl:74: fwrite, f : file, val : _aarray_info
_chpl_complex.chpl:8: fwrite, f : file, x : complex
_chpl_data.chpl:46: fwrite, f : file, val : _fdata
_chpl_file.chpl:109: fwrite, f : file, val : int64
_chpl_file.chpl:139: fwrite, f : file, val : float64
_chpl_file.chpl:159: fwrite, f : file, val : string
_chpl_file.chpl:190: fwrite, f : file, val : bool
_chpl_file.chpl:1: fwrite, f : file, val : file
_chpl_file.chpl:208: fwrite, f : file, x : nil_type
_chpl_htuple.chpl:19: fwrite, f : file, val : _htuple
_chpl_htuple.chpl:19: fwrite, f : file, val : _htuple
_chpl_seq.chpl:157: fwrite, f : file, s : seq
_chpl_seq.chpl:157: fwrite, f : file, s : seq
_chpl_seq.chpl:1: fwrite, f : file, val : _seqNode
_chpl_seq.chpl:1: fwrite, f : file, val : _seqNode
_chpl_seq.chpl:220: fwrite, f : file, s : _aseq
error: '_tmp' has no type
fail: program does not type
fwrite, f : file, val : _tuple2
fwrite, f : file, val : _tuple2
note: candidates are:
note: candidates are:
prelude.chpl:12: fwrite, f : file, val : _ddata
prelude.chpl:12: fwrite, f : file, val : _ddata
prelude.chpl:12: fwrite, f : file, val : _ddata
prelude.chpl:12: fwrite, f : file, val : _ddata
prelude.chpl:12: fwrite, f : file, val : _ddata
prelude.chpl:133: fwrite, f : file, val : reduction
prelude.chpl:136: fwrite, f : file, val : sum
prelude.chpl:139: fwrite, f : file, val : max
prelude.chpl:142: fwrite, f : file, val : min
prelude.chpl:145: fwrite, f : file, val : maxloc
prelude.chpl:148: fwrite, f : file, val : minloc
prelude.chpl:154: fwrite, f : file, val : timer
prelude.chpl:206: fwrite, f : file, val : _methodTokenType
prelude.chpl:212: fwrite, f : file, val : _setterTokenType
prelude.chpl:218: fwrite, f : file, val : _seq
prelude.chpl:221: fwrite, f : file, val : Array
prelude.chpl:243: fwrite, f : file, val : Domain
prelude.chpl:246: fwrite, f : file, val : Tuple
prelude.chpl:28: fwrite, f : file, val : CFILEPTR
prelude.chpl:3: fwrite, f : file, val : object
prelude.chpl:4: fwrite, f : file, val : value
record_type_hierarchy-3-error.chpl:10: f, a : D
record_type_hierarchy-3-error.chpl:16: expression has no type
record_type_hierarchy-3-error.chpl:16: expression has no type
record_type_hierarchy-3-error.chpl:16: illegal call argument type '_tmp' illegal: ( ) 
record_type_hierarchy-3-error.chpl:16: illegal call argument type 'b' illegal: ( C ) 
record_type_hierarchy-3-error.chpl:16: illegal call argument type 'stdout' illegal: ( file ) 
record_type_hierarchy-3-error.chpl:16: unresolved call 'f'
record_type_hierarchy-3-error.chpl:16: unresolved call 'fwrite'
record_type_hierarchy-3-error.chpl:1: fwrite, f : file, val : C
record_type_hierarchy-3-error.chpl:5: fwrite, f : file, val : D
